# Resume-Bot

./: .gitignore  README.md  ingest.py  linkedin.py  main.py  pyproject.toml  resume.py  streamlit_app.py  testing_mail.py
